--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,37 @@
-<main>about works!</main>
+<main>
+    <div>
+        <h1>"Our Cafe in Idaho"</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit deserunt quas ullam. Tenetur quo rem, ducimus consectetur ipsum id accusantium eos sit eligendi? Distinctio, dolorum ipsam quos ratione molestias facilis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias.</p>
+    </div>
+    <aside>
+        <img src="../../../assets/images/header1.jpg">
+    </aside>
+    
+    <section>
+        <h1>Inspired by Insperation</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit deserunt quas ullam. Tenetur quo rem, ducimus consectetur ipsum id accusantium eos sit eligendi? Distinctio, dolorum ipsam quos ratione molestias facilis?</p>
+        <hr>
+    </section>
+    <aside>
+        <img src="../../../assets/images/header2.jpg">
+    </aside>
+
+    <section>
+        <h1>Driven by Driving forward</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit deserunt quas ullam. Tenetur quo rem, ducimus consectetur ipsum id accusantium eos sit eligendi? Distinctio, dolorum ipsam quos ratione molestias facilis?</p>
+        <hr>
+    </section>
+    <aside>
+        <img src="../../../assets/images/header3.jpg">
+    </aside>
+
+    <section>
+        <h1>Dedicatated to Dedication</h1>
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos, aspernatur atque perspiciatis ipsa harum ipsum! Sit aperiam minima earum doloremque repellat alias porro, soluta voluptate harum, eius tempore molestias. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit deserunt quas ullam. Tenetur quo rem, ducimus consectetur ipsum id accusantium eos sit eligendi? Distinctio, dolorum ipsam quos ratione molestias facilis?</p>
+        <hr>
+    </section>
+</main>
