--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,29 @@
-<main>contact works!</main>
+<main>
+    <img src="../../../assets/images/Sona_Cafe_v2PNG.PNG" alt="">
+    
+        <section>
+            <h1>We would love to hear from you!</h1>
+
+            <h2>Email us at</h2>
+            <p>Email@Email.com</p>
+
+            <hr>
+
+            <h2>Call us at</h2>
+            <p>555-555-5555</p>
+
+            <hr>
+
+            <h2>Visit us in person at</h2>
+            <p>Fake address: 11 Lorem ipsum dolor, Sit Amet, 49805</p>
+
+        </section>
+        
+    <div class="gallery">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+</main>
