--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,13 @@
 
 
 
-<div id="ds-wrapper">
-    <aside>
-        <h1>Sona Cafe</h1>
-        <h3>Welcomes You!</h3>
-        <hr>
-        <h3>See our Menu here</h3>
-    </aside>
+<div id="home-wrapper">
 
     <drag-scroll (drag-scroll-y-disabled)="true" (scrollbar-hidden)="true">
         <div>
-            <section drag-scroll-item style="background-image: url(../../../assets/images/header1.jpg)"></section>
-            <section drag-scroll-item style="background-image: url(../../../assets/images/header2.jpg)"></section>
+            <section drag-scroll-item style="background-image: url(../../../assets/images/Sona_Cafe_v2PNG.PNG)"></section>
             <section drag-scroll-item style="background-image: url(../../../assets/images/header3.jpg)"></section>
+            <section drag-scroll-item style="background-image: url(../../../assets/images/header1.webp)"></section>
         </div>
     </drag-scroll>
 
@@ -30,16 +24,16 @@
 
         <div class="imgLinks">
             <a>
-                <p class="img-text">Some Text</p>
                 <img src="../../../assets/images/header1.jpg">
+                <span class="img-text">Some Text</span>
             </a>
             <a>
-                <p class="img-text">Some Text</p>
                 <img src="../../../assets/images/header2.jpg">
+                <span class="img-text">Some Text</span>
             </a>
             <a>
-                <p class="img-text">Some Text</p>
                 <img src="../../../assets/images/header3.jpg">
+                <span class="img-text">Some Text</span>
             </a>
         </div>
 
