--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,4 +1,72 @@
 main{
-    height: 50em;
     background-color: black;
+    color: white;
+
+    div{
+        padding: 6em 0em;
+        width: 60%;
+        margin: auto;
+
+        h1{
+            font-size: 3em;
+            text-align: center;
+            padding-bottom: 0.5em;
+        }
+        hr{
+            margin-bottom: 2em;
+        }
+        p{
+            font-size: 1em;
+            color: gray;
+            padding-bottom: 2em;
+            line-height: 1.5em;
+        }
+        
+    }
+
+    section{
+        padding: 6em 0em;
+        width: 60%;
+        margin: auto;
+
+        h1{
+            font-size: 3em;
+            padding-bottom: 1em;
+        }
+        p{
+            font-size: 1em;
+            color: gray;
+            padding-bottom: 2em;
+            line-height: 1.5em;
+        }
+        hr{
+            margin: 1.5em 0;
+        }
+    }
+    section:last-child{
+        padding-bottom: 13em;
+    }
+    aside{
+
+        img{
+            width: 100%;
+            max-height: 60em;
+        }
+    }
 }
+
+////////////////////Media Queries//////////////
+
+
+
+// /// Phones
+// @media screen and (max-width: 1100px){
+//     main{
+//         div{
+//             width: 90%;
+//         }
+//         section{
+//             width: 90%;
+//         }
+//     }
+// }
