--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,4 +1,35 @@
 main{
-    height: 40em;
     background-color: black;
+    color: white;
+    min-height: 90em;
+
+    img{
+        width: 100%;
+        max-height: 50em;
+    }
+
+    section{
+       margin: 2em auto;
+       width: 60%;
+       text-align: center;
+
+       h1{
+        font-size: 3em;
+        color: rgb(248, 197, 68);
+       }
+       h2{
+        font-size: 2em;
+        padding-top: 1.5em;
+       }
+       p{
+        padding-top: 1em;
+        padding-bottom: 2em;
+        color: gray;
+       }
+       hr{
+        width: 2em;
+        margin: auto;
+       }
+
+    }
 }
