--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,36 +1,9 @@
 
-#ds-wrapper{
-    height: 145em;
+#home-wrapper{
+    display: flex;
+    min-height: 150rem;
     background-color: black;
 
-    aside{
-        position: fixed;
-        top: 25%;
-        left: 50%;
-        transform: translateX(-50%);
-        
-        
-        background-color: rgba(0,0,0,.75);
-        width: 25%;
-        text-align: center;
-        padding: 3em 0em;
-
-        
-    
-        h1{
-            color: white;
-            font-size: 2em;
-        }
-        h3{
-            padding: .75em;
-            font-size: 1.25em;
-            color: white;
-        }
-        hr{
-            width: 50%;
-            margin: auto;
-        }
-    }
     
     drag-scroll{
 
@@ -54,7 +27,6 @@
 
     .content{
         background: black;
-        height: 100em;
         width: 100%;
         position: absolute;
         top: calc(100vh - 30px);
@@ -62,15 +34,17 @@
         h2{
             position: relative;
             background-color: black;
-            width: 15%;
+            max-width: 30%;
             margin: auto;
+            padding: 0.5em;
             top:-40px;
             border-top-left-radius: .5em;
             border-top-right-radius: .5em;
 
-            color: white;
+            color: rgb(248, 197, 68);
             text-align: center;
-            font-size: 2.5em;
+            font-size: 2em;
+            font-weight: bold;
         }
     }
 
@@ -78,7 +52,7 @@
         width: 60%;
         margin: auto;
         text-align: center;
-        margin-bottom: 3%;
+        margin-bottom: 3em;
 
         hr{
             width: 100%;
@@ -86,21 +60,21 @@
             margin: 3% 0;
         }
         h1{
-            color:coral;
+            color: #8a7d40;
             font-family: AlphaFont;
-            font-size: 4em;
+            font-size: 3em;
         }
         h3{
-            color:whitesmoke;
-            font-size: 3em;
+            color: #6F6534;
+            font-size: 2em;
         }
         p{
             color: white;
-            font-size: 1.25em;
-            text-align: left;
+            font-size: 1em;
+            text-align: center;
 
             strong{
-                color: coral;
+                color: #71250E;
             }
         }
     }
@@ -113,13 +87,17 @@
         height: 25em;
         width: 100%;
         overflow: hidden;
+        
 
         a{
+            
+        position: relative;
+        
             img{
+                height: 25em;
                 width: 100%;
-                height: auto;
-
                 transition: transform 1s;
+                z-index: 2;
             }
             
             .img-text{
@@ -130,11 +108,12 @@
                 background-color: rgba(0,0,0,0.85);
                 padding: 3%;
                 
-                z-index: 2;
                 position: absolute;
+                z-index: 3;
                 
-                transform: translateX(50%) translateY(90%);
-                width: 10%;
+                top: 40%;
+                left: 35%;
+                width: 20%;
                 
             }
         }
@@ -149,15 +128,16 @@
 
     .learn{
         height: 29em;
+        overflow: hidden;
+        margin-top: 0.5em;
+
         background-color: black;
         background-image: url("../../../assets/images/idaho-moutains.jpg");
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        overflow: hidden;
 
-        
         h1{
             padding: 2em;
             text-align: center;
@@ -173,4 +153,102 @@
         }
     }
 
+}
+
+////////////////////Media Queries//////////////
+
+
+
+/// Tablet
+@media screen and (max-width: 1500px) and (min-width: 850px){
+    #home-wrapper{
+        height: 110em;
+
+        .imgLinks{
+
+            a{
+                img{
+                    height: 20em;
+                }
+            }
+        }
+    }
+    
+
+   .img-text{
+    top: 20%!important;
+    width:  3em!important;
+   }
+}
+
+
+
+/// Phones
+@media only screen and (max-width: 850px) {
+    #home-wrapper{
+        min-height: 220em;
+
+        .content{
+
+            h2{
+                font-size: 2em;
+                max-width: 80%;
+            }
+        }
+
+
+        .introduction{
+            width: 90%;
+            margin-bottom: 15%;
+            
+            h1{
+                font-size: 3em;
+            }
+            h3{
+                font-size: 2em;
+            }
+            p{
+                text-align: center;
+            }
+        }
+
+
+        .imgLinks{
+            flex-direction: column!important;
+            align-content: center;
+            height:80em!important;
+            position: relative;
+            overflow: hidden;
+
+            a{
+        
+                img{
+                    height: 25em;
+                    width: 100%;
+                    border-top: 10px solid black;
+                    
+                }
+            }
+
+            .img-text{
+                width: 20%!important;
+                top: 20%;
+                
+            }
+            
+        }
+
+
+        .learn{
+            height: 45em!important;
+
+            h1{
+                font-size: 2.5em;
+                padding: 30% 20%;
+            }
+        }
+    }
+
+    
+    
 }
