--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,4 +1,103 @@
-main{
-    height: 20em;
+main{    
     background-color: black;
+    padding-bottom: 15em;
+
+    img{
+        width: 100%;
+    }
+
+    h1{
+        color: rgb(248, 197, 68);
+        font-size: 2rem;
+        padding-top: 5rem;
+        text-align: center;
+    }
+    hr{
+        width: 85%;
+        margin: auto;
+    }
+
+    section{
+        
+        width: 80%;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5rem;
+        justify-content: center;
+        
+    }
+    
+    .item-wrapper{
+        width: 10rem;
+        min-height: 10rem;
+        margin: 5rem 1rem;
+        justify-content: center;
+        text-align: center;
+
+        h2{
+            color: white;
+        } 
+        p{
+            margin-top: 0.25em;
+            color: white;
+        }
+        button{
+            border: none;
+            text-decoration: underline;
+            background-color: black;
+            padding: .2em;
+            color: rgb(248, 197, 68);
+            display: inline-block;
+        }
+        
+    }
+    .hover-display{
+        height: 0px;
+        overflow: hidden;
+        animation: offHover 300ms ease-in-out forwards ;
+        animation: name duration timing-function delay iteration-count direction fill-mode;
+    
+        h3{
+            font-size: 1em;
+            height: 2.5rem;
+            text-overflow: ellipsis;
+            color: white;
+    
+        }
+    
+        img{
+            height: 13em;
+            margin: auto;
+            transition: height 0.5s;
+        }
+    }
+    .item-wrapper:hover{
+        button{
+            opacity: 0;
+        }
+        .hover-display{
+            height: 19em;
+            animation: onHover 500ms ease-in-out forwards;
+        }
+    }
+    
 }
+
+@keyframes onHover {
+    from {height: 0;}
+    to {height: 19em;}
+}
+@keyframes offHover {
+    from {height: 19em;}
+    to {height: 0em;}
+}
+
+@media screen and (min-width: 1250px){
+    .item-wrapper{
+        button{
+            opacity: 0;
+        }
+    }
+}
+
