Fixed logo and made menu descriptions italiacs

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -21,6 +21,7 @@
     
                 
             }
+           
         }
     }
 
@@ -188,6 +189,12 @@
     #home-wrapper{
         min-height: 220em;
 
+            .logo{
+                background-position: 44%!important;
+                background-size: 250%!important;
+            }
+
+  
         .content{
 
             h2{
