--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -63,6 +63,8 @@ main{
             height: 2.5rem;
             text-overflow: ellipsis;
             color: white;
+            font-weight: lighter;
+            font-style: italic;
     
         }
     
