--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
 
     <drag-scroll (drag-scroll-y-disabled)="true" (scrollbar-hidden)="true">
         <div>
-            <section drag-scroll-item style="background-image: url(../../../assets/images/Sona_Cafe_v2PNG.PNG)"></section>
+            <section class="logo" drag-scroll-item style="background-image: url(../../../assets/images/Sona_Cafe_v2PNG.PNG)"></section>
             <section drag-scroll-item style="background-image: url(../../../assets/images/header3.jpg)"></section>
             <section drag-scroll-item style="background-image: url(../../../assets/images/header1.webp)"></section>
         </div>
